# Year-project-1

./: CMakeLists.txt  README.md
00_test/: CMakeLists.txt
00_test/src/: cube.cpp  cube.hpp  main.cpp
02_sdl/: CMakeLists.txt
02_sdl/libs/SDL-release-2.26.1/_build/: SDL2_test.vcxproj.filters  ZERO_CHECK.vcxproj  sdl_headers_copy.vcxproj.filters
02_sdl/src/: main.cpp
04_model/: CMakeLists.txt
04_model/libs/tiny_gltf/: tiny_gltf.h
04_model/resources/models/: 003_test.glb
04_model/src/: main.cpp
05_camera/: CMakeLists.txt
05_camera/src/: main.cpp
06-Skyboxes/: CMakeLists.txt
06-Skyboxes/libs/SDL-release-2.26.1/_build/: SDL2.sln  sdl_headers_copy.vcxproj  uninstall.vcxproj.filters
06-Skyboxes/music/: LICENSE
06-Skyboxes/src/: Camera.cpp  Camera.h  Main.cpp  Mesh.cpp  default.frag
06-Skyboxes_YearP1/: CMakeLists.txt
06-Skyboxes_YearP1/Resources/Skyboxes/models/: ReadMe.txt
06-Skyboxes_YearP1/Resources/Skyboxes/models/house/: finalHouse.gltf  firstFloor - Copy.gltf  scene.gltf  window.glb
06-Skyboxes_YearP1/Resources/Skyboxes/models/house001/: house001.gltf
06-Skyboxes_YearP1/Resources/Skyboxes/models/house002/: firstTEXTURE.gltf
06-Skyboxes_YearP1/Resources/Skyboxes/models/houseNT/: house.gltf
06-Skyboxes_YearP1/libs/: impl.cpp
06-Skyboxes_YearP1/libs/SDL-release-2.26.1/_build/: ALL_BUILD.vcxproj  uninstall.vcxproj
06-Skyboxes_YearP1/libs/bullet3-master/: CMakeLists.txt
06-Skyboxes_YearP1/src/: Camera.cpp  Camera.h  EBO.h  GModel.h  Main.cpp  Texture.cpp  Texture.h  VAO.cpp  VBO.cpp  VBO.h  shaderClass.cpp  skybox.frag  skybox.vert
07/: CMakeLists.txt
07-shadowMap/: CMakeLists.txt
07-shadowMap/libs/SDL-release-2.26.1/_build/: INSTALL.vcxproj  SDL2-static.vcxproj  SDL2main.vcxproj
07-shadowMap/src/: Camera.cpp  Main.cpp  Mesh.h
07/src/: Camera.cpp  Main.cpp  skybox.vert
08-music/: CMakeLists.txt
08-music/libs/SDL-release-2.26.1/_build/: ALL_BUILD.vcxproj.filters  SDL2-static.vcxproj.filters  SDL2_test.vcxproj  ZERO_CHECK.vcxproj.filters
08-music/src/: Camera.cpp  Camera.h  Main.cpp  Texture.h
09-musicPlayer/: CMakeLists.txt
09-musicPlayer/libs/SDL-release-2.26.1/_build/: SDL2main.vcxproj.filters
09-musicPlayer/src/: Main.cpp
10-shadowMapTest/: CMakeLists.txt
10-shadowMapTest/src/: Main.cpp  skybox.frag
11-musicTest/libs/SDL-release-2.26.1/_build/: INSTALL.vcxproj.filters
11-musicTest/src/: Main.cpp
12/06-Skyboxes_YearP1/: CMakeLists.txt
12/06-Skyboxes_YearP1/Resources/Skyboxes/models/house/: secFloor .gltf
12/06-Skyboxes_YearP1/libs/: impl.cpp
12/06-Skyboxes_YearP1/src/: Camera.cpp  Camera.h  EBO.cpp  EBO.h  Main.cpp  VAO.h  audio.c  shaderClass.h
Skyboxes/: CMakeLists.txt
Skyboxes/src/: Main.cpp  skybox.frag  skybox.vert
src/: main.cpp
